# glPaint

app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: dst.frag  dst.vert  main.frag  mask.frag  mask.vert
app/src/main/cpp/: CMakeLists.txt  color_book.cpp
app/src/main/cpp/inc/: engine.h  quad.h
app/src/main/cpp/lib/glm/gtc/: integer.hpp
app/src/main/cpp/lib/glm/gtx/: wrap.hpp
app/src/main/cpp/src/: engine.cpp  quad.cpp
app/src/main/java/melnichuk/al/coloringbookapp/ui/: ColoringBookNativeActivity.java  MessageActivity.java
app/src/main/java/melnichuk/al/coloringbookapp/utils/: NDKHelper.java
app/src/main/lib/ndk_helper/: CMakeLists.txt  JNIHelper.cpp  JNIHelper.h  NDKHelper.h
app/src/main/res/layout/: activity_color_book.xml  activity_message.xml
app/src/main/res/values/: strings.xml
